# CST8219_Assignments

./: .gitignore  CMakeLists.txt  ElectricVehicle.cpp  ElectricVehicle.h  GasolineVehicle.cpp  GasolineVehicle.h  HybridVehicle.cpp  HybridVehicle.h  Vehicle.cpp  Vehicle.h  Week2.cpp  week2.cpp
